Compiler/Parser/KoralParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from KoralParser.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Compiler.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class KoralParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		Arrow=1, BackArrow=2, EqualEqual=3, NotEqual=4, LessEqual=5, GreaterEqual=6, 
		Dot=7, Comma=8, Equal=9, Less=10, Greater=11, SemiColon=12, Colon=13, 
		LeftParen=14, RightParen=15, LeftBrace=16, RightBrace=17, LeftBrack=18, 
		RightBrack=19, Question=20, At=21, Bang=22, Coin=23, Tilde=24, Add=25, 
		Sub=26, Mul=27, Div=28, Mod=29, BitAnd=30, BitOr=31, Caret=32, BackQuote=33, 
		Sharp=34, Mut=35, Let=36, Export=37, If=38, Then=39, Else=40, While=41, 
		Break=42, Continue=43, Return=44, For=45, And=46, Or=47, Not=48, Is=49, 
		As=50, In=51, Out=52, True=53, False=54, Type=55, With=56, Given=57, FloatLiteral=58, 
		DecimalLiteral=59, BinaryLiteral=60, OctalLiteral=61, HexLiteral=62, RuneLiteral=63, 
		StringLiteral=64, UpperIdentifier=65, LowerIdentifier=66, Discard=67, 
		CommentBlock=68, CommentLine=69, NewLine=70, WhiteSpace=71;
	public const int
		RULE_program = 0, RULE_moduleDeclaration = 1, RULE_globalDeclaration = 2, 
		RULE_globalVariableDeclaration = 3, RULE_globalFunctionDeclaration = 4, 
		RULE_globalRecordDeclaration = 5, RULE_globalInterfaceDeclaration = 6, 
		RULE_globalExtensionDeclaration = 7, RULE_globalSumTypeDeclaration = 8, 
		RULE_recordConstructor = 9, RULE_typeParameterList = 10, RULE_typeParameter = 11, 
		RULE_parameterList = 12, RULE_parameter = 13, RULE_fieldList = 14, RULE_field = 15, 
		RULE_methodList = 16, RULE_method = 17, RULE_virtualMethodList = 18, RULE_virtualMethod = 19, 
		RULE_statement = 20, RULE_expressionOrControl = 21, RULE_breakExpression = 22, 
		RULE_continueExpression = 23, RULE_returnExpression = 24, RULE_breakStatement = 25, 
		RULE_continueStatement = 26, RULE_returnStatement = 27, RULE_expressionStatement = 28, 
		RULE_expressionWithTerminator = 29, RULE_expression = 30, RULE_expressionWithBlock = 31, 
		RULE_variableDeclaration = 32, RULE_functionDeclaration = 33, RULE_memberAccessCallSuffix = 34, 
		RULE_callSuffix = 35, RULE_memberAccess = 36, RULE_assignmentExpression = 37, 
		RULE_assignmentExpressionWithBlock = 38, RULE_lambdaExpression = 39, RULE_ifThenExpression = 40, 
		RULE_ifThenExpressionWithBlock = 41, RULE_ifThenElseExpression = 42, RULE_ifThenElseExpressionWithBlock = 43, 
		RULE_whileThenExpression = 44, RULE_whileThenExpressionWithBlock = 45, 
		RULE_whileThenElseExpression = 46, RULE_whileThenElseExpressionWithBlock = 47, 
		RULE_condition = 48, RULE_blockExpression = 49, RULE_pattern = 50, RULE_typePattern = 51, 
		RULE_deconstructPattern = 52, RULE_identifierPattern = 53, RULE_wildcardPattern = 54, 
		RULE_literalPattern = 55, RULE_primaryExpression = 56, RULE_constructExpression = 57, 
		RULE_functionCallExpression = 58, RULE_literalExpression = 59, RULE_type = 60, 
		RULE_functionType = 61, RULE_typeIdentifier = 62, RULE_variableIdentifier = 63, 
		RULE_stringExpression = 64, RULE_runeExpression = 65, RULE_floatExpression = 66, 
		RULE_boolExpression = 67, RULE_integerExpression = 68, RULE_multiplicativeOperator = 69, 
		RULE_additiveOperator = 70, RULE_logicAndOperator = 71, RULE_logicOrOperator = 72, 
		RULE_compareOperator = 73;
	public static readonly string[] ruleNames = {
		"program", "moduleDeclaration", "globalDeclaration", "globalVariableDeclaration", 
		"globalFunctionDeclaration", "globalRecordDeclaration", "globalInterfaceDeclaration", 
		"globalExtensionDeclaration", "globalSumTypeDeclaration", "recordConstructor", 
		"typeParameterList", "typeParameter", "parameterList", "parameter", "fieldList", 
		"field", "methodList", "method", "virtualMethodList", "virtualMethod", 
		"statement", "expressionOrControl", "breakExpression", "continueExpression", 
		"returnExpression", "breakStatement", "continueStatement", "returnStatement", 
		"expressionStatement", "expressionWithTerminator", "expression", "expressionWithBlock", 
		"variableDeclaration", "functionDeclaration", "memberAccessCallSuffix", 
		"callSuffix", "memberAccess", "assignmentExpression", "assignmentExpressionWithBlock", 
		"lambdaExpression", "ifThenExpression", "ifThenExpressionWithBlock", "ifThenElseExpression", 
		"ifThenElseExpressionWithBlock", "whileThenExpression", "whileThenExpressionWithBlock", 
		"whileThenElseExpression", "whileThenElseExpressionWithBlock", "condition", 
		"blockExpression", "pattern", "typePattern", "deconstructPattern", "identifierPattern", 
		"wildcardPattern", "literalPattern", "primaryExpression", "constructExpression", 
		"functionCallExpression", "literalExpression", "type", "functionType", 
		"typeIdentifier", "variableIdentifier", "stringExpression", "runeExpression", 
		"floatExpression", "boolExpression", "integerExpression", "multiplicativeOperator", 
		"additiveOperator", "logicAndOperator", "logicOrOperator", "compareOperator"
	};

	private static readonly string[] _LiteralNames = {
		null, "'->'", "'<-'", "'=='", "'!='", "'<='", "'>='", "'.'", "','", "'='", 
		"'<'", "'>'", "';'", "':'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"'?'", "'@'", "'!'", "'$'", "'~'", "'+'", "'-'", "'*'", "'/'", "'%'", 
		"'&'", "'|'", "'^'", "'`'", "'#'", "'mut'", "'let'", "'export'", "'if'", 
		"'then'", "'else'", "'while'", "'break'", "'continue'", "'return'", "'for'", 
		"'and'", "'or'", "'not'", "'is'", "'as'", "'in'", "'out'", "'true'", "'false'", 
		"'type'", "'with'", "'given'", null, null, null, null, null, null, null, 
		null, null, "'_'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Arrow", "BackArrow", "EqualEqual", "NotEqual", "LessEqual", "GreaterEqual", 
		"Dot", "Comma", "Equal", "Less", "Greater", "SemiColon", "Colon", "LeftParen", 
		"RightParen", "LeftBrace", "RightBrace", "LeftBrack", "RightBrack", "Question", 
		"At", "Bang", "Coin", "Tilde", "Add", "Sub", "Mul", "Div", "Mod", "BitAnd", 
		"BitOr", "Caret", "BackQuote", "Sharp", "Mut", "Let", "Export", "If", 
		"Then", "Else", "While", "Break", "Continue", "Return", "For", "And", 
		"Or", "Not", "Is", "As", "In", "Out", "True", "False", "Type", "With", 
		"Given", "FloatLiteral", "DecimalLiteral", "BinaryLiteral", "OctalLiteral", 
		"HexLiteral", "RuneLiteral", "StringLiteral", "UpperIdentifier", "LowerIdentifier", 
		"Discard", "CommentBlock", "CommentLine", "NewLine", "WhiteSpace"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "KoralParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static KoralParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public KoralParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public KoralParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleDeclarationContext moduleDeclaration() {
			return GetRuleContext<ModuleDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(KoralParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NewLine() { return GetTokens(KoralParser.NewLine); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NewLine(int i) {
			return GetToken(KoralParser.NewLine, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext[] globalDeclaration() {
			return GetRuleContexts<GlobalDeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalDeclarationContext globalDeclaration(int i) {
			return GetRuleContext<GlobalDeclarationContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKoralParserVisitor<TResult> typedVisitor = visitor as IKoralParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 148;
			moduleDeclaration();
			State = 152;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 149;
					Match(NewLine);
					}
					} 
				}
				State = 154;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			State = 170;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 158;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==NewLine) {
						{
						{
						State = 155;
						Match(NewLine);
						}
						}
						State = 160;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 161;
					globalDeclaration();
					State = 165;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
					while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							State = 162;
							Match(NewLine);
							}
							} 
						}
						State = 167;
						ErrorHandler.Sync(this);
						_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
					}
					}
					} 
				}
				State = 172;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			State = 176;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NewLine) {
				{
				{
				State = 173;
				Match(NewLine);
				}
				}
				State = 178;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 179;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Export() { return GetToken(KoralParser.Export, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableIdentifierContext variableIdentifier() {
			return GetRuleContext<VariableIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SemiColon() { return GetToken(KoralParser.SemiColon, 0); }
		public ModuleDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKoralParserVisitor<TResult> typedVisitor = visitor as IKoralParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleDeclarationContext moduleDeclaration() {
		ModuleDeclarationContext _localctx = new ModuleDeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_moduleDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 181;
			Match(Export);
			State = 182;
			variableIdentifier();
			State = 183;
			Match(SemiColon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public GlobalVariableDeclarationContext globalVariableDeclaration() {
			return GetRuleContext<GlobalVariableDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalFunctionDeclarationContext globalFunctionDeclaration() {
			return GetRuleContext<GlobalFunctionDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalRecordDeclarationContext globalRecordDeclaration() {
			return GetRuleContext<GlobalRecordDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalSumTypeDeclarationContext globalSumTypeDeclaration() {
			return GetRuleContext<GlobalSumTypeDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalInterfaceDeclarationContext globalInterfaceDeclaration() {
			return GetRuleContext<GlobalInterfaceDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public GlobalExtensionDeclarationContext globalExtensionDeclaration() {
			return GetRuleContext<GlobalExtensionDeclarationContext>(0);
		}
		public GlobalDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKoralParserVisitor<TResult> typedVisitor = visitor as IKoralParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalDeclarationContext globalDeclaration() {
		GlobalDeclarationContext _localctx = new GlobalDeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_globalDeclaration);
		try {
			State = 191;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 185;
				globalVariableDeclaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 186;
				globalFunctionDeclaration();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 187;
				globalRecordDeclaration();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 188;
				globalSumTypeDeclaration();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 189;
				globalInterfaceDeclaration();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 190;
				globalExtensionDeclaration();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalVariableDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Let() { return GetToken(KoralParser.Let, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableIdentifierContext variableIdentifier() {
			return GetRuleContext<VariableIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Equal() { return GetToken(KoralParser.Equal, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionWithTerminatorContext expressionWithTerminator() {
			return GetRuleContext<ExpressionWithTerminatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Mut() { return GetToken(KoralParser.Mut, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NewLine() { return GetTokens(KoralParser.NewLine); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NewLine(int i) {
			return GetToken(KoralParser.NewLine, i);
		}
		public GlobalVariableDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalVariableDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKoralParserVisitor<TResult> typedVisitor = visitor as IKoralParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalVariableDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalVariableDeclarationContext globalVariableDeclaration() {
		GlobalVariableDeclarationContext _localctx = new GlobalVariableDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_globalVariableDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 193;
			Match(Let);
			State = 195;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Mut) {
				{
				State = 194;
				Match(Mut);
				}
			}

			State = 197;
			variableIdentifier();
			State = 199;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((((_la - 18)) & ~0x3f) == 0 && ((1L << (_la - 18)) & 140874927308801L) != 0)) {
				{
				State = 198;
				type();
				}
			}

			State = 201;
			Match(Equal);
			State = 205;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NewLine) {
				{
				{
				State = 202;
				Match(NewLine);
				}
				}
				State = 207;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 208;
			expressionWithTerminator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalFunctionDeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Let() { return GetToken(KoralParser.Let, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableIdentifierContext variableIdentifier() {
			return GetRuleContext<VariableIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParameterListContext parameterList() {
			return GetRuleContext<ParameterListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Equal() { return GetToken(KoralParser.Equal, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionWithTerminatorContext expressionWithTerminator() {
			return GetRuleContext<ExpressionWithTerminatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeParameterListContext typeParameterList() {
			return GetRuleContext<TypeParameterListContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NewLine() { return GetTokens(KoralParser.NewLine); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NewLine(int i) {
			return GetToken(KoralParser.NewLine, i);
		}
		public GlobalFunctionDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalFunctionDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IKoralParserVisitor<TResult> typedVisitor = visitor as IKoralParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalFunctionDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalFunctionDeclarationContext globalFunctionDeclaration() {
		GlobalFunctionDeclarationContext _localctx = new GlobalFunctionDeclarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_globalFunctionDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 210;
			Match(Let);
			State = 212;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==LeftBrack) {
				{
				State = 211;
				typeParameterList();
				}
			}

			State = 214;
			variableIdentifier();
			State = 215;
			parameterList();
			State = 217;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (((((_la - 18)) & ~0x3f) == 0 && ((1L << (_la - 18)) & 140874927308801L) != 0)) {
				{
				State = 216;
				type();
				}
			}

			State = 219;
			Match(Equal);
			State = 223;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==NewLine) {
				{
				{
				State = 220;
				Match(NewLine);
				}
				}
				State = 225;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 226;
			expressionWithTerminator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
